# deadlines-telegram-bot

./: .coveragerc  .dockerignore  .env.development.example  .env.example  .env.production  .env.production.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  config.py  docker-compose.yml  exceptions.py  health_server.py  main.py  mypy.ini  pyproject.toml  pytest.ini  run_tests.py  scheduler.py
.github/workflows/: cd.yml  ci.yml  release.yml  scheduler.yml
bot/: handlers.py
db/: models.py  session.py
handlers/: base_handlers.py  delete_deadline.py  edit_deadline.py  fsm_add_deadline.py  fsm_edit_deadline.py  help.py  notifications.py  start_router.py
keyboards/: delete_deadline.py  delete_deadline_kb.py
middleware/: dependency_injection.py  rate_limit.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_migration.py  14890e48fea4_add_sent_notifications_table.py  35e1302e1944_add_timezone_support_to_deadline_at.py  4af7324cac5f_fix_deadline_column_name.py  9cfd9a9708b2_add_notification_settings_table.py
services/: deadline_service.py  notification_service.py
tests/: conftest.py  test_database.py  test_deadline_service.py  test_error_handlers.py  test_error_messages.py  test_exceptions.py  test_handlers_base_commands.py  test_handlers_delete_deadline.py  test_handlers_edit_deadline.py  test_handlers_help.py  test_handlers_notifications.py  test_handlers_start_router.py  test_notification_service.py  test_utils_health.py  test_utils_validation.py
utils/: error_handler.py  error_messages.py  health.py  logging_config.py  secrets.py  validation.py
