[project]
name = "deadlines-telegram-bot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.1",
    "dateparser>=1.2.2",
    "dotenv>=0.9.9",
    "pydantic>=2.11.10",
    "sqlalchemy>=2.0.44",
]
