[project]
name = "deadlines-telegram-bot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.1",
    "dateparser>=1.2.2",
    "dotenv>=0.9.9",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pydantic>=2.11.10",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.44",
]
